--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 settings:
   title: 'Status Page'
-  url: 'https://status-page.eidam.dev' # used for Slack messages
+  url: 'https://stat.firmant.me' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
@@ -15,25 +15,35 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
-    method: GET # default=GET
-    expectStatus: 200 # operational status, default=200
-    followRedirect: false # should fetch follow redirects, default=false
+  - id:blog
+    name: Blog
+    url: 'https://firmant.me'
+    method: GET
+    expectStatus: 200
+    linkable: true
+    
+  - id: one-api
+    name: One API
+    url: 'https://api.firmant.me'
+    method: GET
+    expectStatus: 200
     linkable: false # allows the title to be a link, default=true
 
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
-    description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
+  - id: sowayomi
+    name: Sowayomi
+    url: 'https://manga.firmant.me/'
     method: GET
     expectStatus: 200
-    linkable: true # allows the title to be a link, default=true
 
-  - id: blog-cloudflare-com
-    name: The Cloudflare Blog
-    url: 'https://blog.cloudflare.com/'
-    method: GET
+  - id: npm
+    name: Nginx Proxy Manager
+    url: 'https://npm.firmant.me/' # URL to fetch
+    method: GET # default=GET
     expectStatus: 200
+
+  - id: docker
+    name: Dockge
+    url: 'https://docker.firmant.me/' # URL to fetch
+    method: GET # default=GET
+    expectStatus: 200
+    
